--- a/index.html
+++ b/index.html
@@ -392,8 +392,10 @@
         }
 
         /* Authorization */
-        [data-theme="dark"] [id^="operations-Authentication"] .opblock-summary .authorization__btn {
+        [data-theme="dark"] .authorization__btn {
             background-color: transparent !important;
+            border-color: #3498db !important;
+            color: #3498db !important;
         }
 
         [data-theme="dark"] .swagger-ui .opblock-tag-section {
