--- a/index.html
+++ b/index.html
@@ -718,6 +718,34 @@
             filter: var(--black-icons-filter);
         }
 
+        /* Dark Theme Specific Overrides */
+        [data-theme="dark"] .swagger-ui .markdown code,
+        [data-theme="dark"] .swagger-ui .renderedMarkdown code {
+            background: rgb(12, 11, 11);
+            color: #62a03f;
+        }
+
+        [data-theme="dark"] .swagger-ui .opblock-description-wrapper,
+        [data-theme="dark"] .swagger-ui .opblock-external-docs-wrapper,
+        [data-theme="dark"] .swagger-ui .opblock-title_normal {
+            color: #7d8293;
+        }
+
+        [data-theme="dark"] .swagger-ui .info .title small,
+        [data-theme="dark"] .swagger-ui .info .description p,
+        [data-theme="dark"] .swagger-ui .opblock-description-wrapper p,
+        [data-theme="dark"] .swagger-ui .parameter__type,
+        [data-theme="dark"] .swagger-ui .prop-format {
+            color: #e8e8e8 !important;
+        }
+
+        [data-theme="dark"] .swagger-ui .opblock .opblock-section-header {
+            background: hsl(0deg 0% 7.23% / 80%);
+        }
+
+        [data-theme="dark"] .swagger-ui .responses-wrapper {
+            background: rgb(20, 20, 20);
+        }
 
 
         /* Responsive */
