--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
             background: hsl(0deg 0% 7.23% / 80%);
         }
 
-        [data-theme="dark"] .swagger-ui .responses-wrapper {
+        [data-theme="dark"] .swagger-ui .example.microlight {
             background: rgb(20, 20, 20);
         }
 
