--- a/index.html
+++ b/index.html
@@ -747,6 +747,26 @@
             background: rgb(20, 20, 20);
         }
 
+        /* Table Data */
+        [data-theme="dark"] .servers tr td {
+            background-color: transparent !important;
+        }
+
+        /* Computed url */
+        [data-theme="dark"] .servers div .computed-url {
+            color: #ecf0f1;
+        }
+
+        /* Servers title */
+        [data-theme="dark"] .schemes div .servers-title {
+            color: #ecf0f1;
+        }
+
+        /* Heading */
+        [data-theme="dark"] .servers div h4 {
+            color: #ecf0f1 !important;
+        }
+
 
         /* Responsive */
         @media (max-width: 768px) {
