--- a/index.html
+++ b/index.html
@@ -747,6 +747,10 @@
             background: rgb(20, 20, 20);
         }
 
+        [data-theme="dark"] .swagger-ui .opblock-body pre.microlight {
+            background: rgb(20, 20, 20);
+        }
+
         /* Table Data */
         [data-theme="dark"] .servers tr td {
             background-color: transparent !important;
